--- a/barcode.html
+++ b/barcode.html
@@ -28,12 +28,12 @@
 <p class="p1"><span class="s1">        &lt;!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers --&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4;'&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">        &lt;</span><span class="s2">a-marker type='barcode'</span><span class="s1"> </span><span class="s2">value='99'</span><span class="s1">&gt;</span></p>
-<p class="p1"><span class="s1">            </span><span class="s2">&lt;a-box position='0 1 0' color="yellow"&gt;&lt;/a-box&gt;</span></p>
+<p class="p1"><span class="s1">        &lt;</span><span class="s2">a-marker type='barcode'</span><span class="s1"> </span><span class="s2">value='17'</span><span class="s1">&gt;</span></p>
+<p class="p1"><span class="s1">            </span><span class="s2">&lt;a-box position='0 1 0' color="blue"&gt;&lt;/a-cone&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/a-marker&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">&lt;a-marker type='barcode' value=’22’&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;a-box position='0 1 0' color="yellow"&gt;&lt;/a-box&gt;</span></p>
+<p class="p1"><span class="s1">            &lt;a-box position='0 1 0' color="blue"&gt;&lt;/a-cone&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/a-marker&gt;</span></p>
 <p class="p1"><span class="s1">    </span></p>
 <p class="p1"><span class="s1">        &lt;!-- use this &lt;a-entity camera&gt; to support multiple-markers, otherwise use &lt;a-marker-camera&gt; instead of &lt;/a-marker&gt; --&gt;</span></p>
