--- a/barcode.html
+++ b/barcode.html
@@ -33,7 +33,7 @@
 <p class="p1"><span class="s1">        &lt;/a-marker&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">&lt;a-marker type='barcode' value=’22’&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;a-box position='0 1 0' color="blue"&gt;&lt;/a-cone&gt;</span></p>
+<p class="p1"><span class="s1">            &lt;a-cone position='0 1 0' color="blue"&gt;&lt;/a-cone&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/a-marker&gt;</span></p>
 <p class="p1"><span class="s1">    </span></p>
 <p class="p1"><span class="s1">        &lt;!-- use this &lt;a-entity camera&gt; to support multiple-markers, otherwise use &lt;a-marker-camera&gt; instead of &lt;/a-marker&gt; --&gt;</span></p>
