--- a/barcode.html
+++ b/barcode.html
@@ -29,7 +29,7 @@
 <p class="p1"><span class="s1">        &lt;a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4;'&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">        &lt;</span><span class="s2">a-marker type='barcode'</span><span class="s1"> </span><span class="s2">value='17'</span><span class="s1">&gt;</span></p>
-<p class="p1"><span class="s1">            </span><span class="s2">&lt;a-box position='0 1 0' color="blue"&gt;&lt;/a-cone&gt;</span></p>
+<p class="p1"><span class="s1">            </span><span class="s2">&lt;a-cone position='0 1 0' color="blue"&gt;&lt;/a-cone&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/a-marker&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">&lt;a-marker type='barcode' value=’22’&gt;</span></p>
