--- a/barcode.html
+++ b/barcode.html
@@ -11,9 +11,9 @@
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4;'>
 
-        <a-marker type='barcode' value='38'>
+        <a-marker type='barcode' value='17'>
             
-<a-sphere position='0 1 0' color="green"></a-sphere>
+<a-sphere position='0 1 0' color="blue"></a-cone>
         </a-marker>
 
 <a-marker type='barcode' value=’22’>
