--- a/barcode.html
+++ b/barcode.html
@@ -13,7 +13,7 @@
 
         <a-marker type='barcode' value='17'>
             
-<a-sphere position='0 1 0' color="blue"></a-cone>
+<a-cone position='0 1 0' color="blue"></a-cone>
         </a-marker>
 
 <a-marker type='barcode' value=’22’>
